# open-l2encdec

./: .clang-format  .gitignore  API.md  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  Dockerfile  LICENSE  README.md  vcpkg.json
.github/workflows/: build.yml  build_cli.yml  build_examples.yml  release.yml
blowfish/: LICENSE
cli/: CMakeLists.txt  README.md  cli.cpp
cmake/: mingw-w64-i686.cmake
cmake/configs/: mbedtls_config.h
cmake/modules/: FindGMP.cmake
cmake/toolchains/: mingw-w64-i686.cmake  mingw-w64-x86_64.cmake  msvc-static-mt.cmake
dockerfiles/: unix.Dockerfile  win32.Dockerfile  win64.Dockerfile
example/: CMakeLists.txt  README.md
examples/: CMakeLists.txt  CMakePresets.json  README.md
examples/cli/: CMakeLists.txt  README.md
examples/cli/docker/: unix.Dockerfile  win32.Dockerfile  win64.Dockerfile
examples/cli/src/: cli.cpp  main.cpp  options.cpp  options.h
examples/txt211json/: CMakeLists.txt  README.md
examples/txt211json/src/: json.h  main.cpp  normalize.cpp  normalize.h  utf.cpp  utf.h
examples/utx121webp/: CMakeLists.txt  README.md
examples/utx121webp/src/: main.cpp  webp.cpp  webp.h  write_queue.cpp  write_queue.h
include/: l2encdec.h
modules/typescript/: .gitignore  .npmignore  CMakeLists.txt  README.md  bindings.cpp  cli.ts  index.html  index.ts  index.web.ts  package-lock.json  package.json  tsconfig.json
modules/typescript/scripts/: copy-wasm.js
sample/: CMakeLists.txt  REAMDE.md
sample/src/: sample.cpp
src/: bf.cpp  bf.h  blowfish.cpp  blowfish.h  l2encdec.cpp  l2encdec_private.h  main.cpp  rsa.cpp  rsa.h  utils.cpp  utils.h  xor.cpp  xor.h  xor_utils.cpp  xor_utils.h  zlib_utils.cpp  zlib_utils.h
tests/: CMakeLists.txt  test_bf.cpp  test_blowfish.cpp  test_l2encdec.cpp  test_l2encdec_init_params.cpp  test_l2encdec_verify_checksum.cpp  test_rsa.cpp  test_utils.cpp  test_xor.cpp  test_zlib.cpp
tools/cli/: CMakeLists.txt  CMakePresets.json  README.md
tools/cli/docker/: win32.Dockerfile
tools/cmake/toolchains/: mingw-w64-i686.cmake  mingw-w64-x86_64.cmake  msvc-static-mt.cmake
tools/docker/: unix.Dockerfile  win64.Dockerfile
